--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -153,7 +153,7 @@
         {
             "label": "🧪 Backend: Run All Quality Checks",
             "type": "shell",
-            "command": "cd backend && ([ -d venv ] || (echo '⚠️  Virtual environment not found. Run \"Backend: Setup Virtual Environment\" task first.' && exit 1)) && source venv/bin/activate && echo '🧪 1/3: Testing...' && pytest tests/ -v && echo '📊 2/3: Coverage...' && pytest tests/ --cov=. --cov-report=term && echo '🐍 3/3: Linting...' && black . --check && pylint . && echo '✅ Backend checks passed!'",
+            "command": "cd backend && ([ -d venv ] || (echo '⚠️  Virtual environment not found. Run \"Backend: Setup Virtual Environment\" task first.' && exit 1)) && source venv/bin/activate && echo '🧪 1/3: Testing...' && pytest tests/ -v && echo '📊 2/3: Coverage...' && pytest tests/ --cov=. --cov-report=term && echo '🐍 3/3: Linting...' && black . --check --exclude='(alembic|venv)' && pylint . && echo '✅ Backend checks passed!'",
             "group": "test",
             "presentation": {
                 "reveal": "always",
@@ -208,7 +208,7 @@
         {
             "label": "🐍 Format Backend Code (Black)",
             "type": "shell",
-            "command": "cd backend && black . --line-length=88 --exclude=alembic",
+            "command": "cd backend && black . --line-length=88 --exclude='(alembic|venv)'",
             "group": "build",
             "presentation": {
                 "reveal": "always",
@@ -219,7 +219,7 @@
         {
             "label": "🐍 Check Backend Formatting (Black)",
             "type": "shell",
-            "command": "cd backend && black . --check --line-length=88 --exclude=alembic",
+            "command": "cd backend && black . --check --line-length=88 --exclude='(alembic|venv)'",
             "group": "test",
             "presentation": {
                 "reveal": "always",
@@ -310,7 +310,7 @@
         {
             "label": "✨ Run All Backend Quality Checks",
             "type": "shell",
-            "command": "cd backend && black . --check --exclude=alembic && pylint . --rcfile=../.pylintrc",
+            "command": "cd backend && black . --check --exclude='(alembic|venv)' && pylint . --rcfile=../.pylintrc",
             "group": "test",
             "presentation": {
                 "reveal": "always",
@@ -321,7 +321,7 @@
         {
             "label": "✨ Run All Quality Checks (Full Project)",
             "type": "shell",
-            "command": "echo '🧧 LEGO Full Quality Gate - All systems check!' && echo '' && echo '⚙️ GitHub Actions Validation...' && actionlint .github/workflows/* && echo '' && echo '🐍 Backend Quality...' && cd backend && black . --check --line-length=88 --exclude=alembic && pylint . --rcfile=../.pylintrc && echo '' && echo '🎆 Frontend Quality...' && cd ../frontend && npm run lint && npm run format:check && npm run type-check && npm run test && echo '' && echo '🎉 All LEGO pieces validated! 🏢'",
+            "command": "echo '🧧 LEGO Full Quality Gate - All systems check!' && echo '' && echo '⚙️ GitHub Actions Validation...' && actionlint .github/workflows/* && echo '' && echo '🐍 Backend Quality...' && cd backend && black . --check --line-length=88 --exclude='(alembic|venv)' && pylint . --rcfile=../.pylintrc && echo '' && echo '🎆 Frontend Quality...' && cd ../frontend && npm run lint && npm run format:check && npm run type-check && npm run test && echo '' && echo '🎉 All LEGO pieces validated! 🏢'",
             "group": "test",
             "presentation": {
                 "reveal": "always",
@@ -332,7 +332,7 @@
         {
             "label": "🚀 Pre-Push Validation (Complete Quality Gate)",
             "type": "shell",
-            "command": "echo '🧧 LEGO Pre-Push Quality Gate - Validating all pieces fit together!' && echo '' && echo '⚙️ Step 1: GitHub Actions Validation...' && actionlint .github/workflows/* && echo '' && echo '🔍 Step 2: Frontend Linting...' && cd frontend && npm run lint && echo '' && echo '🐍 Step 3: Backend Linting...' && cd ../backend && black . --check --line-length=88 --exclude=alembic && pylint . --rcfile=../.pylintrc && echo '' && echo '✨ Step 4: Frontend Quality...' && cd ../frontend && npm run format:check && npm run type-check && npm run test && echo '' && echo '🛡️ Step 5: Backend Security & Quality...' && cd ../backend && safety scan --apply-fixes --detailed-output && bandit -r . -f json -o bandit-report.json -x tests/ || true && echo '' && echo '🐳 Step 6: Docker Build Test...' && cd .. && docker-compose build && echo '' && echo '🎉 All LEGO pieces validated! Ready to push! 🏢'"
+            "command": "echo '🧧 LEGO Pre-Push Quality Gate - Validating all pieces fit together!' && echo '' && echo '⚙️ Step 1: GitHub Actions Validation...' && actionlint .github/workflows/* && echo '' && echo '🔍 Step 2: Frontend Linting...' && cd frontend && npm run lint && echo '' && echo '🐍 Step 3: Backend Linting...' && cd ../backend && black . --check --line-length=88 --exclude='(alembic|venv)' && pylint . --rcfile=../.pylintrc && echo '' && echo '✨ Step 4: Frontend Quality...' && cd ../frontend && npm run format:check && npm run type-check && npm run test && echo '' && echo '🛡️ Step 5: Backend Security & Quality...' && cd ../backend && safety scan --apply-fixes --detailed-output && bandit -r . -f json -o bandit-report.json -x tests/ || true && echo '' && echo '🐳 Step 6: Docker Build Test...' && cd .. && docker-compose build && echo '' && echo '🎉 All LEGO pieces validated! Ready to push! 🏢'"
             "group": "test",
             "presentation": {
                 "reveal": "always",
@@ -343,7 +343,7 @@
         {
             "label": "🔧 Quick Pre-Push Check (Essential Only)",
             "type": "shell",
-            "command": "echo '🧱 Quick LEGO Quality Check...' && echo '' && echo '🔍 Linting...' && cd frontend && npm run lint && cd ../backend && black . --check --line-length=88 --exclude=alembic && echo '' && echo '✨ Type Checking...' && cd ../frontend && npm run type-check && echo '' && echo '🎉 Quick validation complete! 🏢'",
+            "command": "echo '🧱 Quick LEGO Quality Check...' && echo '' && echo '🔍 Linting...' && cd frontend && npm run lint && cd ../backend && black . --check --line-length=88 --exclude='(alembic|venv)' && echo '' && echo '✨ Type Checking...' && cd ../frontend && npm run type-check && echo '' && echo '🎉 Quick validation complete! 🏢'",
             "group": "test",
             "presentation": {
                 "reveal": "always",
@@ -354,7 +354,7 @@
         {
             "label": "🧪 Fix All Formatting Issues",
             "type": "shell",
-            "command": "echo '🧱 LEGO Auto-Formatter - Making all pieces fit perfectly!' && echo '' && echo '🐍 Formatting Backend (Black)...' && cd backend && black . --line-length=88 --exclude=alembic && echo '' && echo '🎨 Formatting Frontend (Prettier)...' && cd ../frontend && npm run format && echo '' && echo '🎉 All LEGO pieces are now perfectly aligned! 🏢'",
+            "command": "echo '🧱 LEGO Auto-Formatter - Making all pieces fit perfectly!' && echo '' && echo '🐍 Formatting Backend (Black)...' && cd backend && black . --line-length=88 --exclude='(alembic|venv)' && echo '' && echo '🎨 Formatting Frontend (Prettier)...' && cd ../frontend && npm run format && echo '' && echo '🎉 All LEGO pieces are now perfectly aligned! 🏢'",
             "group": "build",
             "presentation": {
                 "reveal": "always",
@@ -475,7 +475,7 @@
         {
             "label": "🚀 Commit & Push (with Quality Gate)",
             "type": "shell",
-            "command": "echo '🧱 LEGO Smart Push - Quality Gate + Git Push!' && echo '' && echo '🔍 Running Quality Gate...' && cd frontend && npm run lint && cd ../backend && black . --line-length=88 --exclude=alembic && cd ../frontend && npm run type-check && echo '' && echo '📝 Preparing commit...' && cd .. && git add . && echo 'Enter commit message:' && read -p 'Commit: ' commit_msg && git commit -m "🧱 $commit_msg" && echo '' && echo '🚀 Pushing to remote...' && git push && echo '' && echo '🎉 Successfully pushed with quality validation! 🏢'",
+            "command": "echo '🧱 LEGO Smart Push - Quality Gate + Git Push!' && echo '' && echo '🔍 Running Quality Gate...' && cd frontend && npm run lint && cd ../backend && black . --line-length=88 --exclude='(alembic|venv)' && cd ../frontend && npm run type-check && echo '' && echo '📝 Preparing commit...' && cd .. && git add . && echo 'Enter commit message:' && read -p 'Commit: ' commit_msg && git commit -m "🧱 $commit_msg" && echo '' && echo '🚀 Pushing to remote...' && git push && echo '' && echo '🎉 Successfully pushed with quality validation! 🏢'",
             "group": "none",
             "presentation": {
                 "reveal": "always",
